[package]
name = "tomatocrab"
version = "0.1.0"
edition = "2024"
description = "A Pomodoro timer TUI application"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
directories = "5"
uuid = { version = "1", features = ["v4", "serde"] }
